<resources>
    <string name="app_name">Waves of Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="email_or_phone_number">Email or Phone number</string>
    <string name="create_account">Create Account</string>
    <string name="locationTxt">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="bhopal">Bhopal</string>
    <string name="city">City</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <string name="waves_of_food">Waves of Food</string>
    <string name="_1">1</string>
    <string name="previously_buy">Previously Buy</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="go_home">Go Home</string>
    <string name="congrats_nyour_order_placed">Congrats\nYour Order Placed</string>
    <string name="short_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="food_name">Food Name</string>
    <string name="your_web_client_id" translatable="false">636076344069-6t9jvmnm0sip4v6o5bvcfulasv2q9ha0.apps.googleusercontent.com</string>
    <string name="short_des">Short Description</string>
    <string name="notification">Notification</string>
    <string name="recent_buy_items">Recent Buy Items</string>
</resources>