<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailsActivity">


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/detailsFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginBottom="10dp"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsFoodName">

                <ImageView
                    android:id="@+id/detailsFoodImg"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:scaleType="center"
                    android:src="@drawable/menu1" />
            </androidx.cardview.widget.CardView>

            <TextView

                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:text="@string/short_des"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/cardView4"
                app:layout_constraintTop_toBottomOf="@+id/cardView4" />


            <TextView
                android:id="@+id/detailsFoodDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/yeonsung_regular"
                android:text="@string/short_description"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/cardView4"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:text="Ingredients"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/detailsFoodDescription"
                app:layout_constraintTop_toBottomOf="@+id/detailsFoodDescription" />

            <TextView
                android:id="@+id/detailsFoodIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/yeonsung_regular"
                android:text="Strowberry\nCream\nwheat"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/detailsFoodDescription"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addToCartBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/greenbuttongradient"
                android:fontFamily="@font/yeonsung_regular"
                android:text="@string/add_to_cart"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>